--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=Blog
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/blog
-spring.datasource.username=postgres
-spring.datasource.password=8810
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url=jdbc:postgresql://dpg-d5fs1nogjchc73eao0tg-a:5432/blog
+spring.datasource.username=ems_user
+spring.datasource.password=Q3VqDU3F6lpRbsHL202H3HXU3Unv09me
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 
 server.port=8080
 
